# mdvupy

./: .ruff.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build-macos.sh  main.py  mdvupy-macos.spec  pyproject.toml  test.md
docs/: BUILDING-MACOS.md
plans/: mdvupy-development-plan.md
src/mdvupy/: __init__.py  app.py  history.py  links.py  loader.py  main.py  search.py  toc.py  view.py
src/mdvupy/icons/: README.md  icon.icns  make-icns.sh
